Created profile card, and updated layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
         <progress></progress>
     </div>
     -->
-
-    <div class="content-container">
-
+    
+    <div  style="padding-left:10%">
             <router-outlet></router-outlet>
     </div>
+</div>
