--- a/src/app/concepts/concept-home/concept-home.component.html
+++ b/src/app/concepts/concept-home/concept-home.component.html
@@ -19,7 +19,7 @@
                     <div *ngFor="let university of universities ">
 
                         <clr-stack-block [clrSbExpanded]="false">
-                            <clr-stack-label> {{university.Name}}
+                            <clr-stack-label> {{university.College.CollegeName}}
                             </clr-stack-label>
 
                             <clr-stack-block>
