--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div class="login-wrapper">
     <form class="login" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm">
         <label class="title">
@@ -18,9 +17,11 @@
                     Remember me
                 </label>
             </div>
-                <alert></alert>
+            <input type="file" (change)="fileEvent($event)" />
+
+            <alert></alert>
             <button type="submit" class="btn btn-primary">NEXT</button>
-            <a [routerLink]="['/register']" class="signup">Create new account</a> 
+            <a [routerLink]="['/register']" class="signup">Create new account</a>
         </div>
     </form>
 </div>
