--- a/src/app/projects/project-listing/project-listing.component.html
+++ b/src/app/projects/project-listing/project-listing.component.html
@@ -1,5 +1,10 @@
-<div *ngFor="let project of projects ">
+<div *ngIf="projects">
+  <div *ngFor="let project of projects ">
 
-  <app-project-card [project]="project"></app-project-card>
+    <app-project-card [project]="project"></app-project-card>
   </div>
+</div>
+<div *ngIf="projects?.length < 1">
+  You do not have any active projects
+</div>
 <div class="alert alert-danger" *ngIf="error">{{ error }}</div>
